--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 html,body{
     margin:0;
     text-align: center;
@@ -14,12 +13,49 @@ html,body{
 
 }
 
+.recipeOptions{
+    display: inline;
+    text-align: center;
+
+}
+.recipeOptions a{
+    position: absolute;
+   margin-left:-270px;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 70px;
+}
+.recipeOptions img{
+    margin-top:40px;
+    border-radius:50%;
+  
+
+}
+.recipeOptions button{
+    border-radius:50%;
+    background: none;
+    height: 300px;
+    width: 300px;
+    border: 0ch white;
+    margin: 35px;
+    
+}
+.recipeOptions img:hover{
+    border-radius:50%;
+    margin-left: auto;
+    margin-right: 60px; 
+    border: 10px solid black;
+    transition: all 0.3s linear;
+    padding: 20px;
+    overflow: hidden; 
+}
+
 #slider{
     width:60%;
     height: 400px;
     margin: 1%;
     border-radius: 15px 15px;
-
+    border: 10px solid black;
 }
 .class{
     background: black;
@@ -75,94 +111,15 @@ html,body{
 {
     height: 150px;
     width: 150px;
+    margin-left: -50px;
     border-radius: 50%;
     margin-right:500px;
     text-align: center;
 }
 .persons figcaption{
-    margin-left: 6%;
-=======
-html,body{
-    margin:0;
-    text-align: center;
-
-}
-.logo{
-    padding: 30px;
-    background: center;
-    background-repeat: no-repeat;
-    background-image: url("images//underline.jpg");
-    text-align: center;
-    line-height: 30px;
-
-}
-
-#slider{
-    width:60%;
-    height: 400px;
-    margin: 1%;
-    border-radius: 15px 15px;
-
-}
-.class{
-    background: black;
-}
-.recipe
-{
-    
-    display: flex;
-    margin: 1%;
-    background: black;
-    border-radius: 15px 15px;
-
-}
-
-.recipe img
-{
-    border-radius: 30px;
-    padding: 20px;
-    height: 800px;
-    width: 600px;
-    float: left;
-}
-.recipe ul{
-    border-radius: 30px;
-    background: black;
-    color: azure;
-    height: 615px;
-    width: 600px;
+    display: inline;
+    margin-left: -540px;
     font-size: 20px;
-    display: center;
-    padding: 5%;
-}
-.list{
-    list-style: none;
-}
-.Tuna{
-    border-radius: 30px;
-    padding: 20px;
-    height: 800px;
-    width: 600px;
-    float: right;
-}
-.author{
-    text-align: center;
-    text-decoration: underline;
-}
-.persons{
-    display: flex;
-    margin-left: 30%;
-
-}
-.persons img
-{
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-    margin-right:500px;
-    text-align: center;
-}
-.persons figcaption{
-    margin-left: 6%;
->>>>>>> origin/master
+    font-weight: 400;
+    line-height: 30px;
 }
